# iot-projet

./: .gitignore
backend/: amateur.csv  iot_backend_v1.py  stations.csv
drafts/: skyfield_test.py
radio-pass-back/: README.md  pyproject.toml  run.sh
radio-pass-back/radio_pass_back/: amateur_satcat_data.csv  app.py  calculations.py  models.py
radio-sat-pass-front/: README.md  _layout.css  _layout.html  package-lock.json  package.json
radio-sat-pass-front/src/: App.css  App.js  SatPos.js  Satellites.js  Trajectory.js
radio-sat-pass-front/src/components/: Header.js  LeftSidebar.js  MapComponent.js  RightSidebar.js  Satellites.js  Trajectory.js
